feat: new version after code review
